<resources>
    <string name="app_name">PointOfSale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="semua_menu">Semua Menu</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>
    <string name="snack">Snack</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="cari_menu_kamu_disini">Cari Menu Kamu disini..</string>
    <string name="penjualan">Penjualan</string>
    <string name="menu">Menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="chickenjoy">ChickenJoy</string>
    <string name="profile_pic">profile_pic</string>
    <string name="pilih">Pilih</string>
    <string name="batal">Batal</string>
    <string name="bersihkan">Bersihkan</string>
    <string name="invoice">Invoice</string>
    <string name="masukan_nama_pembeli">Masukan nama pembeli</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="subtotal">Subtotal</string>
    <string name="ppn_10">PPN 10%</string>
    <string name="_0">0</string>
    <string name="lanjutkan_ke_pembayaran">Lanjutkan Ke Pembayaran</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="qris">QRIS</string>
    <string name="tunai">Tunai</string>
    <string name="total_yang_dibayar">Total Yang Dibayar</string>
    <string name="konfirmasi_pembayran">Konfirmasi Pembayaran</string>
    <string name="transaksi_berhasil">Transaksi Berhasil</string>
    <string name="sedang_mencetak_nota">Sedang Mencetak Nota</string>
    <string name="nota_berhasil_dicetak">Nota Berhasil Dicetak</string>
    <string name="kembali_ke_dashboard">Kembali Ke Dashboard</string>
    <string name="menu_saya">Menu Saya</string>
    <string name="daftar_menu">Daftar Menu</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_menu_baru">Tambah Menu Baru</string>
    <string name="tambah_menu">Tambah Menu</string>
    <string name="hapus_menu">Hapus Menu</string>
    <string name="apakah_anda_yakin_ingin_menghapus_menu_ini_dari_daftar">Apakah anda yakin ingin menghapus menu ini dari daftar ?</string>
    <string name="hapus">Hapus</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="ubah">Ubah</string>
    <string name="belum_ada_pesanan">Belum Ada Pesanan</string>
    <string name="selamat_datang_login">Selamat Datang !</string>
    <string name="silahkan_login_menggunakan_akun_yang_telah_didaftarkan_oleh_admin">Silahkan login menggunakan akun yang telah didaftarkan oleh admin.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="cetak_nota">Cetak Nota</string>
    <string name="apakah_anda_yakin_ingin_keluar_dari_akun_ini">Apakah anda yakin ingin keluar dari akun ini?</string>
    <string name="ya_keluar">Ya, Keluar</string>
    <string name="tidak_menemukan_hasil">Tidak Menemukan Hasil</string>
    <string name="harap_mencoba_menggunakan_kata_kunci_lain_apabila_anda_tidak_dapat_menemukan_menu_yang_dicari">Harap mencoba menggunakan kata kunci lain apabila Anda tidak dapat menemukan menu yang dicari.</string>
    <string name="edit">Edit</string>
    <string name="harga_menu">Harga Menu</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="lain_lain">Lain-Lain</string>
    <string name="tidak_ada_menu_apapun">Tidak Ada Menu Apapun</string>
    <string name="anda_belum_menambahkan_menu_mohon_tambahkan_menu_terlebih_dahulu">Anda belum menambahkan menu. Mohon tambahkan menu terlebih dahulu.</string>
    <string name="penjualan_saya">Penjualan Saya</string>
    <string name="unduh">Unduh</string>
    <string name="kemarin">Kemarin</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="minggu_ini">Minggu Ini</string>
    <string name="bulan_ini">Bulan Ini</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="belum_ada_riwayat_penjualan">Belum Ada Riwayat Penjualan</string>
    <string name="anda_tidak_mempunyai_riwayat_penjualan_item_apapun">Anda tidak mempunyai riwayat penjualan item apapun.</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="tambah_karyawan_baru">Tambah Karyawan Baru</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="username">Username</string>
</resources>