<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_dashboard"
        android:enabled="true"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu"
        android:enabled="true"
        android:title="@string/menu" />
    <item
        android:id="@+id/penjualan"
        android:icon="@drawable/ic_penjualan"
        android:enabled="true"
        android:title="@string/penjualan" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:enabled="true"
        android:title="Logout" />

</menu>