<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    tools:context=".ui.menu.EditMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center|start"
            android:lineSpacingExtra="2sp"
            android:text="@string/menu_saya"
            android:textColor="#0A0A0A"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="vertical"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/querySearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cari_menu_kamu_disini" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/search"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:backgroundTint="#004080"
            android:src="@drawable/ic_search" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center|start"
            android:text="@string/daftar_menu"
            android:textColor="#000000"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnTambahTransaksi"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="@string/tambah"
            app:icon="@drawable/ic_plus"
            app:iconTint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/semuaMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:text="Semua Makanan" />

        <com.google.android.material.chip.Chip
            android:id="@+id/makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:checkable="true"
            android:clickable="true"
            android:text="@string/makanan" />

        <com.google.android.material.chip.Chip
            android:id="@+id/minuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:checkable="true"
            android:clickable="true"
            android:text="@string/minuman" />

        <com.google.android.material.chip.Chip
            android:id="@+id/snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:checkable="true"
            android:clickable="true"
            android:text="@string/snack" />

        <com.google.android.material.chip.Chip
            android:id="@+id/lain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:checkable="true"
            android:clickable="true"
            android:text="@string/lain_lain" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/noItemFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_item_filter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidak_menemukan_hasil"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harap_mencoba_menggunakan_kata_kunci_lain_apabila_anda_tidak_dapat_menemukan_menu_yang_dicari"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noDataFoundInDb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_data_db" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidak_ada_menu_apapun"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anda_belum_menambahkan_menu_mohon_tambahkan_menu_terlebih_dahulu"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>