<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/holderTitle"
        android:layout_width="392dp"
        android:layout_height="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingExtra="4sp"
            android:text="@string/pilih_metode_pembayaran"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="392dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holderTitle" />


    <LinearLayout
        android:id="@+id/holderPembayaran"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider">

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/tunai"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_radio"
                android:drawableEnd="@drawable/ic_cash"
                android:layoutDirection="rtl"
                android:padding="12dp"
                android:text="@string/tunai" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_radio"
                android:clickable="false"
                android:drawableEnd="@drawable/ic_qris"
                android:layoutDirection="rtl"
                android:padding="12dp"
                android:text="@string/qris" />

        </RadioGroup>

    </LinearLayout>


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="392dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holderPembayaran" />

    <TextView
        android:id="@+id/totalBayarCheckOut"
        android:layout_width="392dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_radio"
        android:gravity="center|start"
        android:hint="@string/total_yang_dibayar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <LinearLayout
        android:id="@+id/holderBtn"
        android:layout_width="392dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalBayarCheckOut">

        <Button
            android:id="@+id/batal"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/batal" />

        <Button
            android:id="@+id/btn_lanjut_checkOut"
            android:layout_width="280dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/konfirmasi_pembayran" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>